[tool.poetry]
name = "python-homework16"
version = "0.1.0"
description = ""
authors = ["Mikhail Vasiliev <m89154280096@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc8"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
